fix jump effect on rhythmbox(3.4.8) play button

--- a/Bubble-Lighter/gtk-3.0/gtk.css
+++ b/Bubble-Lighter/gtk-3.0/gtk.css
@@ -5474,6 +5474,13 @@ event.color-light:backdrop {
   color: rgba(0, 0, 0, 0.3);
 }
 
+/************
+* Rhythmbox *
+************/
+toolbar > toolitem > box > button, .inline-toolbar > toolitem > box > button {
+  padding: 3px 6px;
+}
+
 #panel_window {
   background-color: #cbcbcb;
   color: #4c4747;
